ui.frontend/src/main/webpack/etisalat/styles/core-components/breadcrumb/_breadcrumb.scss
.breadcrumb {
  background-color: $sand-white-50;
  margin-bottom: $margin-step-0;
  padding: toRem(4) toRem(84);
}

.cmp-breadcrumb {
  &__item {
    background-color: transparent;
    color: $gray-fill;
    font-size: 12px;
    letter-spacing: 0;
    list-style: none;
    margin: 0;
    padding: 0.375rem 0;
    text-transform: uppercase;

    @include font-family-lato-withoutge();

    @include rtlBlock {
      @include font-family-Neotech-ge();
    }
  }

  a {
    color: $gray-fill;
  }

  &__item-link {
    span {
      &:hover {
        color: $main-green;
        text-decoration: underline;
      }
    }

    &::after {
      color: $gray;
      content: ">\00a0";
      cursor: none;
      padding: 0 0.125rem;
      text-decoration: none;
    }
  }

  &__item--active {
    font-weight: get-font-weight("semibold");

    @include rtlBlock {
      font-weight: get-font-weight("semibold");
    }
  }
}

// starter-header
.starter-header {
  padding: $padding-step-3 !important;

  @include respond-to-min($desktop) {
    padding: calc(#{$padding-step-3} + 1px) calc(#{$padding-step-4} - 2px) !important;
  }

  .cmp-breadcrumb--list {
    display: none;
    margin-bottom: $margin-step-2;

    @include respond-to-min($desktop) {
      display: block;

      .cmp-text {
        p {
          color: $gray-fill;
          display: inline-block;
          font-size: $font12;
          letter-spacing: toRem(2);
          line-height: toRem(15);
          text-transform: uppercase;

          @include font-family-lato;

          .cmp-link__arrow {
            font-size: $font12;
            margin-right: calc(#{$margin-step-0} + 2px);
            padding-right: calc(#{$padding-step-0} + 2px);
            padding-top: calc(#{$padding-step-0} + 2px);
          }

          &:hover {
            text-decoration: underline;
          }
        }
      }
    }
  }

  // breadcrumb
  .cmp-breadcrumb {
    &__item,
    &-link {
      letter-spacing: toRem(2);
      line-height: toRem(15);
      margin-right: calc(#{$margin-step-1}-5px);
      padding-right: calc(#{$padding-step-1}-2px);
      text-transform: uppercase;

      @include font-family-lato;
    }

    &__item {
      color: $gray-fill;

      &:hover {
        text-decoration: underline;
      }

      &-link {
        &::after {
          border: solid $arrow-border-green;
          border-width: 0 $border-step-1 $border-step-1 0;
          content: "";
          display: inline-block;
          height: toRem(9);
          padding: $padding-step-0;
          position: absolute;
          top: toRem(34);
          width: toRem(9);

          @include rtl(transform, rotate(-45deg), rotate(135deg));
        }
      }
    }
  }

  .breadcrumb {
    background-color: transparent;
    border-radius: $border-radius-step-0;
    margin-bottom: $margin-step-2;
    padding: $padding-step-0;
  }

  h3 {
    margin-bottom: $margin-step-0;
  }

  .old-price {
    background-color: $orange;

    @include respond-to-min($desktop) {
      margin-left: toRem(22);
      margin-right: $margin-step-0;

      @include rtlBlock {
        margin-left: $margin-step-0;
        margin-right: torem (22);
      }
    }
  }

  .secondary-header1 {
    margin-top: $margin-step-1;
  }

  @include respond-to-min($desktop) {
    .cmp-text {
      h3 {
        .text--orange_tag,
        .text--green {
          font-size: $font32;
          line-height: toRem(40);
          margin-left: toRem(22);
          margin-top: toRem(8);

          .body-copy4 {
            margin-left: toRem(-15);
          }
        }
      }

      p {
        .font--small {
          @include respond-to-min($desktop-wide) {
            float: right;
          }

          font-size: $font14;
          margin-top: toRem(2);
        }
      }
    }
  }

  .cmp-button--width_100 {
    margin-top: toRem(18);

    @include respond-to-min($desktop-wide) {
      margin-left: toRem(28);
      min-width: toRem(180);
      width: auto;
    }

    @include rtlBlock() {
      width: 100%;
    }
  }

  @include rtlBlock {
    .text {
      float: right !important;
    }
  }
}

